--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   "author": "Dan-Matei Mitreanu",
   "license": "MIT",
   "devDependencies": {
+    "@types/uuid": "^9.0.8",
     "ts-node": "^10.9.2",
     "tsup": "^8.0.2",
     "typescript": "^5.4.3"
   },
   "dependencies": {
-    "ioredis": "^5.3.2"
+    "ioredis": "^5.3.2",
+    "uuid": "^9.0.1"
   }
 }
